--- a/app/views/designers/_card.html.erb
+++ b/app/views/designers/_card.html.erb
@@ -20,8 +20,8 @@
         <p class="subtitle-card"><%= card.country.country %></p>
       <% end %>
       <h2 class="title-card"><%= card.nom_designer %></h2>
-      <h3 class="title-description-card">Description</h3>
-      <p class="description-card description-card-home"><%= card.description %></p>
+      <h3 class="title-description-card">Présentation générale</h3>
+      <p class="description-card description-card-home"><%= card.presentation_generale %></p>
     </div>
   </div>
 <%end%>
