--- a/app/assets/stylesheets/base/_font.scss
+++ b/app/assets/stylesheets/base/_font.scss
@@ -73,7 +73,7 @@ p{
   color: $primary-color;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width:426px) and (max-width: 600px) {
   h1 {
     font-size: 30px;
   }
@@ -101,20 +101,5 @@ p{
   }
   p{
     font-size: 16px;
-  }
-}
-@media screen and (max-width: 375px) {
-  h1 {
-    font-size: 28px;
-  }
-
-  h2 {
-    font-size: 20px;
-  }
-  h3{
-    font-size: 16px;
-  }
-  p{
-    font-size: 14px;
   }
 }
