--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -11,6 +11,10 @@
   font-weight: 500;
   cursor: pointer;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
 
   &:hover {
     background-color: #EDEDED;
@@ -170,6 +174,15 @@
       scale: 0.8;
     }
   }
+
+  //Save
+  .circle-save {
+    width: 60px;
+    height: 60px;
+    svg{
+    scale: 0.9;
+  }
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -207,6 +220,7 @@
     padding: 20px 15px;
     font-size: 15px;
   }
+
   .circle {
     width: 65px;
     height: 65px;
