--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -4,16 +4,17 @@ header {
   position: fixed;
   width: 250px;
   height: 100vh;
-  padding: 0px 50px;
+  padding: 0 50px;
   background-color: $secondary-color;
   overflow-y: scroll;
   z-index: 99;
+  transition: width 0.3s ease, height 0.3s ease;
 }
 
 // Logo
 
 .logo-header {
-  padding: 8vh 0px;
+  padding: 8vh 0;
   display: flex;
   align-items: center;
 }
@@ -21,29 +22,30 @@ header {
 .name-header {
   font-weight: 500;
   color: $primary-color;
-  font-size: 24px;
-  margin-left: 16px;
+  font-size: 1.5rem;
+  margin-left: 1rem;
 }
 
-// Naviguation
+// Navigation
 
 .nav-header {
-  margin-top: 16px;
+  margin-top: 1rem;
 }
 
 header ul {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 1.5rem;
 }
 
 header li a {
   display: inline-flex;
   align-items: center;
-  gap: 16px;
+  gap: 1rem;
   font-weight: 500;
-  font-size: 19px;
+  font-size: 1.2rem;
   color: $text-color;
+  transition: opacity 0.3s ease;
 
   &:hover {
     opacity: 0.8;
@@ -56,7 +58,7 @@ header li a svg {
 
 header li .active {
   color: $primary-color;
-  font-size: 19px;
+  font-size: 1.2rem;
   font-weight: 600;
 }
 
@@ -70,65 +72,56 @@ header li .active svg path {
 
 // Button et liens
 .button-login {
-  width: 160px;
+  width: 10rem;
 }
 
 .link-header {
   margin-top: 10vh;
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  padding-bottom: 60px;
+  gap: 1rem;
+  padding-bottom: 3.75rem;
 }
 
 .link-header a {
-  font-size: 16px;
+  font-size: 1rem;
   cursor: pointer;
   color: $text-color;
+  transition: opacity 0.3s ease;
 
   &:hover {
     opacity: 0.8;
   }
 }
 
-
-
-
-
-
-
 /* Petit desktop */
 @media screen and (max-width: 1280px) {
   header {
     width: 20vw;
     height: 100vh;
-    padding: 0px 5vw;
+    padding: 0 5vw;
   }
 
-  // Logo
-
   .logo-header {
-    padding: 8vh 0px;
+    padding: 8vh 0;
   }
 
   .name-header {
-    font-size: 20px;
-    margin-left: 16px;
+    font-size: 1.25rem;
+    margin-left: 1rem;
   }
 
-  // Naviguation
-
   .nav-header {
-    margin-top: 16px;
+    margin-top: 1rem;
   }
 
   header ul {
-    gap: 20px;
+    gap: 1.25rem;
   }
 
   header li a {
-    gap: 16px;
-    font-size: 18px;
+    gap: 1rem;
+    font-size: 1.125rem;
   }
 
   header li a svg {
@@ -136,59 +129,55 @@ header li .active svg path {
   }
 
   header li .active {
-    font-size: 18px;
+    font-size: 1.125rem;
   }
 
   .flex-btn-login {
     margin-top: 5vh;
   }
 
-  // Button et liens
   .button-login {
     width: fit-content;
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 
   .link-header {
     margin-top: 10vh;
-    padding-bottom: 60px;
+    padding-bottom: 3.75rem;
   }
 
   .link-header a {
-    font-size: 16px;
+    font-size: 1rem;
   }
 }
+
 @media screen and (max-width: 1024px) {
   header {
     width: 20vw;
     height: 100vh;
-    padding: 0px 5vw;
+    padding: 0 5vw;
   }
 
-  // Logo
-
   .logo-header {
-    padding: 8vh 0px;
+    padding: 8vh 0;
   }
 
   .name-header {
-    font-size: 20px;
-    margin-left: 16px;
+    font-size: 1.25rem;
+    margin-left: 1rem;
   }
 
-  // Naviguation
-
   .nav-header {
-    margin-top: 16px;
+    margin-top: 1rem;
   }
 
   header ul {
-    gap: 20px;
+    gap: 1.25rem;
   }
 
   header li a {
-    gap: 16px;
-    font-size: 18px;
+    gap: 1rem;
+    font-size: 1.125rem;
   }
 
   header li a svg {
@@ -196,30 +185,29 @@ header li .active svg path {
   }
 
   header li .active p {
-    font-size: 18px;
+    font-size: 1.125rem;
   }
 
   .flex-btn-login {
     margin-top: 5vh;
   }
 
-  // Button et liens
   .button-login {
     width: fit-content;
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 
   .link-header {
     margin-top: 10vh;
-    padding-bottom: 60px;
+    padding-bottom: 3.75rem;
   }
 
   .link-header a {
-    font-size: 16px;
+    font-size: 1rem;
   }
 }
 
-@media screen and (min-width:426px) and (max-width: 768px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   header {
     position: fixed;
     width: 100vw;
@@ -235,13 +223,11 @@ header li .active svg path {
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
   }
 
-  // Logo
   .logo-header,
   .name-header {
     display: none;
   }
 
-  // Navigation
   .nav-header {
     margin: 0;
   }
@@ -249,7 +235,7 @@ header li .active svg path {
   header ul {
     display: flex;
     flex-direction: row;
-    gap: 8px;
+    gap: 0.5rem;
     width: 100%;
     justify-content: space-between;
     align-items: center;
@@ -261,23 +247,23 @@ header li .active svg path {
   }
 
   header li:nth-child(2) {
-    flex: 2; /* "Ajouter" aura plus de largeur pour le centrer */
+    flex: 2;
   }
 
   header li a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 14px;
-    gap: 4px;
+    font-size: 0.875rem;
+    gap: 0.25rem;
   }
 
   header li a svg {
-    scale: 0.9; /* Ajuster la taille si nécessaire */
+    scale: 0.9;
   }
 
   header li .active {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 
   .flex-btn-login,
@@ -285,12 +271,13 @@ header li .active svg path {
     display: none;
   }
 }
+
 @media screen and (max-width: 425px) {
   header {
     position: fixed;
     width: 100vw;
     height: 80px;
-    padding: 0px;
+    padding: 0;
     bottom: 0;
     left: 0;
     background-color: $secondary-color;
@@ -301,13 +288,11 @@ header li .active svg path {
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
   }
 
-  // Logo
   .logo-header,
   .name-header {
     display: none;
   }
 
-  // Navigation
   .nav-header {
     margin: 0;
   }
@@ -315,7 +300,7 @@ header li .active svg path {
   header ul {
     display: flex;
     flex-direction: row;
-    gap: 8px;
+    gap: 0.5rem;
     width: 100%;
     justify-content: space-between;
     align-items: center;
@@ -327,23 +312,23 @@ header li .active svg path {
   }
 
   header li:nth-child(2) {
-    flex: 2; /* "Ajouter" aura plus de largeur pour le centrer */
+    flex: 2;
   }
 
   header li a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 14px;
-    gap: 4px;
+    font-size: 0.875rem;
+    gap: 0.25rem;
   }
 
   header li a svg {
-    scale: 0.9; /* Ajuster la taille si nécessaire */
+    scale: 0.9;
   }
 
   header li .active {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
 
   .flex-btn-login,
