--- a/app/assets/stylesheets/pages/_reference.scss
+++ b/app/assets/stylesheets/pages/_reference.scss
@@ -5,31 +5,30 @@
 }
 
 .header-show {
-  transition: height 0.6s ease-in-out, opacity 0.6s ease-in-out;
-  height: 100px;
-  background-size: contain;
-  background-position: center center;
-  background-repeat: none;
-}
-
-.header-show.small-height {
-  height: 50px;
+  transition: height 0.3s ease, background-color 0.3s ease;
 }
 
 .header-top {
-  transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out;
-  transform: translateY(-100%);
   opacity: 0;
+  transition: opacity 0.3s ease;
 }
 
 .header-top.show-header-top {
-  transform: translateY(0);
   opacity: 1;
 }
 
-.info-header-show {
-  transition: opacity 0.6s ease-in-out;
+.hidden {
   opacity: 1;
+  transition: opacity 0.3s ease;
+}
+
+.hidden.hidden {
+  opacity: 0;
+}
+
+.info-header-show {
+  opacity: 1;
+  transition: opacity 0.3s ease;
 }
 
 .info-header-show.hidden {
@@ -37,24 +36,14 @@
 }
 
 .header-show {
-  background-size: cover;
   display: flex;
   justify-content: center;
   width: 100vw;
   height: 80vh;
-  position: relative;
-}
-
-.header-show::after {
-  content: '';
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: inherit;
-  /* Récupère l'image de fond de l'élément parent */
-  z-index: -2;
+  background: center center / cover no-repeat;
 }
 
 .date-header {
@@ -70,13 +59,9 @@
 }
 
 .small-height {
-  height: 320px !important;
-  position: fixed !important;
-  top: 0 !important;
-  left: 0 !important;
+  height: 38vh !important;
+  min-height: 280px;
   z-index: 999;
-  display: flex;
-  justify-content: center;
 }
 
 .small-height::before {
@@ -88,6 +73,16 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: -1;
+}
+
+.text-show {
+  width: 60vw;
+  max-width: 1000px;
+  margin-top: 82vh;
+}
+
+.margin-text-header {
+  margin-top: 44vh;
 }
 
 .content-show {
@@ -106,9 +101,9 @@
 .header-top {
   display: none;
   position: absolute;
-  bottom: 40px;
   left: 5vw;
   width: 100%;
+  bottom: 20px;
   padding: 10px;
   z-index: 99;
 }
@@ -151,11 +146,6 @@
   padding: 12px 25px;
   border-radius: 5px;
   font-size: 20px;
-}
-
-.text-show {
-  width: 60vw;
-  max-width: 1000px;
 }
 
 .small-circle {
@@ -227,7 +217,7 @@
   height: 100%;
   border-radius: 10px;
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   position: relative;
 }
 
@@ -425,30 +415,37 @@
   left: 35px;
   top: 35px;
 }
-@media screen and (max-width: 1300px) {
+
+@media screen and (min-width:1025px) and (max-width: 1300px) {
   .text-show {
     width: 70vw;
   }
+
   .oeuvre-card {
     width: 380px;
     height: 230px;
   }
 }
-@media screen and (max-width: 1024px) {
+
+@media screen and (min-width:601px) and (max-width: 1024px) {
   .body-show {
     padding-bottom: 50px;
   }
-
   .header-show {
-    height: 100px;
+    height: 70vh;
   }
 
-  .header-show.small-height {
-    height: 50px;
+  .content-show {
+    margin-top: 50px;
   }
 
-  .header-show {
-    height: 75vh;
+  .text-show {
+    width: 70vw;
+    margin-top: 68vh;
+  }
+
+  .margin-text-header {
+    margin-top: 350px;
   }
 
   .date-header {
@@ -491,9 +488,7 @@
     scale: 0.8;
   }
 
-  .text-show {
-    width: 80vw;
-  }
+
 
   .small-circle {
     width: 12px;
@@ -548,7 +543,8 @@
   .flex-contributor {
     gap: 32px;
   }
-  .box-contributor{
+
+  .box-contributor {
     width: 40vw;
   }
 
@@ -564,33 +560,14 @@
     font-size: 22px;
   }
 }
-@media screen and (max-width: 600px) {
+
+@media screen and (min-width:426px) and (max-width: 600px) {
   .body-show {
     padding-bottom: 50px;
   }
 
   .header-show {
-    height: 100px;
-  }
-
-  .header-show.small-height {
-    height: 50px;
-  }
-
-  .header-show {
     height: 75vh;
-  }
-
-  .date-header {
-    position: absolute;
-    bottom: 50px;
-    left: 5vw;
-  }
-
-  .domaine-header {
-    position: absolute;
-    bottom: 50px;
-    right: 5vw;
   }
 
   .small-height {
@@ -601,6 +578,14 @@
     margin-top: 50px;
   }
 
+  .text-show {
+    width: 85vw;
+    margin-top: 70vh;
+  }
+
+  .margin-text-header {
+    margin-top: 350px;
+  }
   .header-top {
     display: none;
     position: absolute;
@@ -629,10 +614,6 @@
 
   .info-card-dark svg {
     scale: 0.8;
-  }
-
-  .text-show {
-    width: 85vw;
   }
 
   .small-circle {
@@ -688,7 +669,8 @@
   .flex-contributor {
     gap: 32px;
   }
-  .box-contributor{
+
+  .box-contributor {
     width: 40vw;
   }
 
@@ -704,33 +686,14 @@
     font-size: 20px;
   }
 }
+
 @media screen and (max-width: 425px) {
   .body-show {
     padding-bottom: 50px;
   }
 
   .header-show {
-    height: 100px;
-  }
-
-  .header-show.small-height {
-    height: 50px;
-  }
-
-  .header-show {
     height: 75vh;
-  }
-
-  .date-header {
-    position: absolute;
-    bottom: 50px;
-    left: 5vw;
-  }
-
-  .domaine-header {
-    position: absolute;
-    bottom: 50px;
-    right: 5vw;
   }
 
   .small-height {
@@ -741,10 +704,18 @@
     margin-top: 50px;
   }
 
+  .text-show {
+    width: 90vw;
+    margin-top: 70vh;
+  }
+
+  .margin-text-header {
+    margin-top: 350px;
+  }
   .header-top {
     display: none;
     position: absolute;
-    bottom: 40px;
+    bottom: 20px;
     left: 5vw;
     width: 100%;
     padding: 10px;
@@ -753,10 +724,12 @@
 
   .flex-info {
     margin-top: 16px;
-    gap: 24px;
+    gap: 8px;
+    flex-direction: column;
   }
 
   .info-card {
+    width: fit-content;
     padding: 12px 20px;
     height: 25px;
     font-size: 16px;
@@ -768,11 +741,7 @@
   }
 
   .info-card-dark svg {
-    scale: 0.8;
-  }
-
-  .text-show {
-    width: 90vw;
+    scale: 0.7;
   }
 
   .small-circle {
@@ -849,5 +818,6 @@
 
   .title-description-reference {
     font-size: 20px;
+    margin-top: 24px;
   }
 }
