--- a/app/views/designers/edit.html.erb
+++ b/app/views/designers/edit.html.erb
@@ -7,3 +7,13 @@
     <%= link_to "Retourner aux validations", validation_path %>
   </div>
 </div>
+<script src="https://www.google.com/recaptcha/api.js?render=<%= Rails.application.secrets.recaptcha_site_key %>"></script>
+<script>
+  document.querySelector("form").addEventListener("submit", function(event) {
+    event.preventDefault(); // Empêche l'envoi temporaire pour attendre le token
+    grecaptcha.execute("<%= Rails.application.secrets.recaptcha_site_key %>", {action: 'submit'}).then(function(token) {
+      document.getElementById('recaptcha_token').value = token;
+      event.target.submit(); // Soumet le formulaire après avoir obtenu le token
+    });
+  });
+</script>
