--- a/app/views/oeuvres/search.html.erb
+++ b/app/views/oeuvres/search.html.erb
@@ -407,215 +407,227 @@
     <% @designers = Designer.where(validation: true).order(:nom_designer) %>
     <% @designers.each do |designer| %>
       <%= link_to designer do %>
-        <div class="card-designer" style="background: url('<%= designer.image %>'); background-size: cover; background-position:center;">
-          <div class="inner-card-designer">
-            <p class="country-card-designer">
-              <span class="flag"><%= country_flag(designer.country.country_numeric) %></span>
-              <%= designer.country.country %></p>
-            <p class="title-card-designer"><%= designer.nom_designer %></p>
-          </div>
-        </div>
-      <%end%>
-    <% end %>
-  </div>
-  <div id="load-more-button-designers">
-    <button class="load-more-btn button dark" >Charger plus de designers</button>
-  </div>
-  <h2 class="title">Oeuvres</h2>
-  <div class="container-oeuvres">
-    <div class="flex-oeuvre" id="oeuvre-cards">
-      <% @oeuvres.each do |oeuvre| %>
-        <%= link_to oeuvre do %>
-          <div class="card-oeuvre" style="background: url('<%= oeuvre.image %>'); background-size: cover; background-position:center;">
-            <div class="inner-card-oeuvre">
-              <p class="domaine-card-oeuvre"><%= oeuvre.domaine.domaine %></p>
-              <p class="title-card-oeuvre"><%= oeuvre.nom_oeuvre %></p>
+        <% image_path = "designers/desktop/#{remove_accents_and_special_chars(designer.nom_designer)}.webp" %>
+        <% if asset_exists?(image_path) %>
+          <div class="card-designer" style="background: url('<%= asset_path(image_path) %>'); background-size: cover; background-position:center center;">
+          <% else %>
+            <% Rails.logger.debug("Image not found : #{image_path}") %>
+            <div class="card-designer" style="background: url('<%= asset_path(designer.image) %>'); background-size: cover; background-position:center;">
+            <% end %>
+            <div class="inner-card-designer">
+              <p class="country-card-designer">
+                <span class="flag"><%= country_flag(designer.country.country_numeric) %></span>
+                <%= designer.country.country %></p>
+              <p class="title-card-designer"><%= designer.nom_designer %></p>
             </div>
           </div>
-        <% end %>
+        <%end%>
       <% end %>
     </div>
-    <!-- Bouton en dehors de la flexbox -->
-    <div id="load-more-button-oeuvres">
-      <button class="load-more-btn button dark">Charger plus d'oeuvres</button>
+    <div id="load-more-button-designers">
+      <button class="load-more-btn button dark" >Charger plus de designers</button>
     </div>
-  </div>
-  <script>
-    $(document).ready(function() {
-        const designerCards = document.querySelectorAll('.card-designer');
-        const oeuvreCards = document.querySelectorAll('.card-oeuvre');
-        const loadMoreButtonDesigners = document.getElementById('load-more-button-designers');
-        const loadMoreButtonOeuvres = document.getElementById('load-more-button-oeuvres');
-        const initialCardsToShow = 8;
-        let cardsToShowDesigners = initialCardsToShow;
-        let cardsToShowOeuvres = initialCardsToShow;
+    <h2 class="title">Oeuvres</h2>
+    <div class="container-oeuvres">
+      <div class="flex-oeuvre" id="oeuvre-cards">
+        <% @oeuvres.each do |oeuvre| %>
+          <%= link_to oeuvre do %>
+            <% image_path = "oeuvres/desktop/#{remove_accents_and_special_chars(oeuvre.nom_oeuvre)}.webp" %>
+            <% if asset_exists?(image_path) %>
+              <div class="card-oeuvre" style="background: url('<%= asset_path(image_path) %>'); background-size: cover; background-position:center center;">
+              <% else %>
+                <% Rails.logger.debug("Image not found : #{image_path}") %>
+                <div class="card-oeuvre" style="background: url('<%= asset_path(oeuvre.image) %>'); background-size: cover; background-position:center;">
+                <% end %>
+                <div class="inner-card-oeuvre">
+                  <p class="domaine-card-oeuvre"><%= oeuvre.domaine.domaine %></p>
+                  <p class="title-card-oeuvre"><%= oeuvre.nom_oeuvre %></p>
+                </div>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+        <!-- Bouton en dehors de la flexbox -->
+        <div id="load-more-button-oeuvres">
+          <button class="load-more-btn button dark">Charger plus d'oeuvres</button>
+        </div>
+      </div>
+      <script>
+        $(document).ready(function() {
+            const designerCards = document.querySelectorAll('.card-designer');
+            const oeuvreCards = document.querySelectorAll('.card-oeuvre');
+            const loadMoreButtonDesigners = document.getElementById('load-more-button-designers');
+            const loadMoreButtonOeuvres = document.getElementById('load-more-button-oeuvres');
+            const initialCardsToShow = 8;
+            let cardsToShowDesigners = initialCardsToShow;
+            let cardsToShowOeuvres = initialCardsToShow;
 
-        // Fonction pour afficher les cartes des designers
-        function showMoreDesigners() {
-          for (let i = cardsToShowDesigners; i < cardsToShowDesigners + initialCardsToShow; i++) {
-            if (i >= designerCards.length) {
-              loadMoreButtonDesigners.disabled = true;
-              loadMoreButtonDesigners.textContent = "";
-              break;
+            // Fonction pour afficher les cartes des designers
+            function showMoreDesigners() {
+              for (let i = cardsToShowDesigners; i < cardsToShowDesigners + initialCardsToShow; i++) {
+                if (i >= designerCards.length) {
+                  loadMoreButtonDesigners.disabled = true;
+                  loadMoreButtonDesigners.textContent = "";
+                  break;
+                }
+                designerCards[i].style.display = 'flex';
+              }
+              cardsToShowDesigners += initialCardsToShow;
             }
-            designerCards[i].style.display = 'flex';
-          }
-          cardsToShowDesigners += initialCardsToShow;
-        }
 
-        // Fonction pour afficher les cartes des oeuvres
-        function showMoreOeuvres() {
-          for (let i = cardsToShowOeuvres; i < cardsToShowOeuvres + initialCardsToShow; i++) {
-            if (i >= oeuvreCards.length) {
-              loadMoreButtonOeuvres.disabled = true;
-              loadMoreButtonOeuvres.textContent = "";
-              break;
+            // Fonction pour afficher les cartes des oeuvres
+            function showMoreOeuvres() {
+              for (let i = cardsToShowOeuvres; i < cardsToShowOeuvres + initialCardsToShow; i++) {
+                if (i >= oeuvreCards.length) {
+                  loadMoreButtonOeuvres.disabled = true;
+                  loadMoreButtonOeuvres.textContent = "";
+                  break;
+                }
+                oeuvreCards[i].style.display = 'flex';
+              }
+              cardsToShowOeuvres += initialCardsToShow;
             }
-            oeuvreCards[i].style.display = 'flex';
+
+            // Cacher toutes les cartes des designers au-delà de celles à afficher initialement
+            for (let i = initialCardsToShow; i < designerCards.length; i++) {
+              designerCards[i].style.display = 'none';
+            }
+
+            // Cacher toutes les cartes des oeuvres au-delà de celles à afficher initialement
+            for (let i = initialCardsToShow; i < oeuvreCards.length; i++) {
+              oeuvreCards[i].style.display = 'none';
+            }
+
+            // Gérer le clic sur le bouton "Charger plus" pour les designers
+            loadMoreButtonDesigners.addEventListener('click', function() {
+              showMoreDesigners();
+            });
+
+            // Gérer le clic sur le bouton "Charger plus" pour les oeuvres
+            loadMoreButtonOeuvres.addEventListener('click', function() {
+              showMoreOeuvres();
+            });
+          });
+      </script>
+    </div>
+    <script>
+      function autocomplete(inp, arr, routeMap) {
+        var currentFocus;
+
+        inp.addEventListener("input", function(e) {
+          var a, b, i, val = this.value;
+          closeAllLists();
+          if (!val) { return false; }
+          currentFocus = -1;
+
+          // Crée la liste de suggestions
+          a = document.createElement("DIV");
+          a.setAttribute("id", this.id + "autocomplete-list");
+          a.setAttribute("class", "autocomplete-items");
+          this.parentNode.appendChild(a);
+
+          // Parcours les éléments du tableau pour afficher les suggestions
+          for (i = 0; i < arr.length; i++) {
+            if (arr[i].substr(0, val.length).toUpperCase() == val.toUpperCase()) {
+              b = document.createElement("DIV");
+              b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
+              b.innerHTML += arr[i].substr(val.length);
+              b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
+
+              // Gestion du clic sur la suggestion
+              b.addEventListener("click", function(e) {
+                const selectedValue = this.getElementsByTagName("input")[0].value;
+                inp.value = selectedValue;
+                closeAllLists();
+
+                // Redirection vers la page correspondante
+                if (routeMap[selectedValue]) {
+                  window.location.href = routeMap[selectedValue];
+                } else {
+                  alert("Page non trouvée pour " + selectedValue);
+                }
+              });
+
+              a.appendChild(b);
+            }
           }
-          cardsToShowOeuvres += initialCardsToShow;
-        }
-
-        // Cacher toutes les cartes des designers au-delà de celles à afficher initialement
-        for (let i = initialCardsToShow; i < designerCards.length; i++) {
-          designerCards[i].style.display = 'none';
-        }
-
-        // Cacher toutes les cartes des oeuvres au-delà de celles à afficher initialement
-        for (let i = initialCardsToShow; i < oeuvreCards.length; i++) {
-          oeuvreCards[i].style.display = 'none';
-        }
-
-        // Gérer le clic sur le bouton "Charger plus" pour les designers
-        loadMoreButtonDesigners.addEventListener('click', function() {
-          showMoreDesigners();
         });
 
-        // Gérer le clic sur le bouton "Charger plus" pour les oeuvres
-        loadMoreButtonOeuvres.addEventListener('click', function() {
-          showMoreOeuvres();
+        inp.addEventListener("keydown", function(e) {
+          var x = document.getElementById(this.id + "autocomplete-list");
+          if (x) x = x.getElementsByTagName("div");
+
+          // Gérer la navigation dans la liste avec les flèches
+          if (e.keyCode == 40) {
+            currentFocus++;
+            addActive(x);
+          } else if (e.keyCode == 38) {
+            currentFocus--;
+            addActive(x);
+          } else if (e.keyCode == 13) {
+            e.preventDefault();
+            if (currentFocus > -1) {
+              if (x) x[currentFocus].click();
+            }
+          }
+        });
+
+        function addActive(x) {
+          if (!x) return false;
+          removeActive(x);
+          if (currentFocus >= x.length) currentFocus = 0;
+          if (currentFocus < 0) currentFocus = (x.length - 1);
+          x[currentFocus].classList.add("autocomplete-active");
+        }
+
+        function removeActive(x) {
+          for (var i = 0; i < x.length; i++) {
+            x[i].classList.remove("autocomplete-active");
+          }
+        }
+
+        function closeAllLists(elmnt) {
+          var x = document.getElementsByClassName("autocomplete-items");
+          for (var i = 0; i < x.length; i++) {
+            if (elmnt != x[i] && elmnt != inp) {
+              x[i].parentNode.removeChild(x[i]);
+            }
+          }
+        }
+
+        document.addEventListener("click", function(e) {
+          closeAllLists(e.target);
+        });
+      }
+    </script>
+    <script>
+      $(document).ready(function() {
+        var works = <%= raw @works.to_json %>; // Injecter les noms des œuvres dans le JavaScript
+        var designers = <%= raw @designers.to_json %>; // Injecter les noms des designers dans le JavaScript
+
+        // Mapping des noms vers les URLs respectives
+        var routeMap = {
+          <% @oeuvres.each do |oeuvre| %>
+            "<%= j oeuvre.nom_oeuvre %>": "<%= oeuvre_path(oeuvre) %>",
+          <% end %>
+          <% @designers.each do |designer| %>
+            "<%= j designer.nom_designer %>": "<%= designer_path(designer) %>",
+          <% end %>
+        };
+
+        // Initialise l'autocomplétion
+        autocomplete(document.getElementById("workSearch"), works.concat(designers), routeMap);
+      });
+    </script>
+    <script>
+      $(document).ready(function() {
+        var workSearchInput = document.getElementById("workSearch");
+
+        workSearchInput.addEventListener("keydown", function(event) {
+          if (event.key === "Enter") {
+            event.preventDefault(); // Empêche le comportement par défaut
+            document.querySelector("form").submit(); // Soumettre le formulaire
+          }
         });
       });
-  </script>
-</div>
-<script>
-  function autocomplete(inp, arr, routeMap) {
-    var currentFocus;
-
-    inp.addEventListener("input", function(e) {
-      var a, b, i, val = this.value;
-      closeAllLists();
-      if (!val) { return false; }
-      currentFocus = -1;
-
-      // Crée la liste de suggestions
-      a = document.createElement("DIV");
-      a.setAttribute("id", this.id + "autocomplete-list");
-      a.setAttribute("class", "autocomplete-items");
-      this.parentNode.appendChild(a);
-
-      // Parcours les éléments du tableau pour afficher les suggestions
-      for (i = 0; i < arr.length; i++) {
-        if (arr[i].substr(0, val.length).toUpperCase() == val.toUpperCase()) {
-          b = document.createElement("DIV");
-          b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
-          b.innerHTML += arr[i].substr(val.length);
-          b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
-
-          // Gestion du clic sur la suggestion
-          b.addEventListener("click", function(e) {
-            const selectedValue = this.getElementsByTagName("input")[0].value;
-            inp.value = selectedValue;
-            closeAllLists();
-
-            // Redirection vers la page correspondante
-            if (routeMap[selectedValue]) {
-              window.location.href = routeMap[selectedValue];
-            } else {
-              alert("Page non trouvée pour " + selectedValue);
-            }
-          });
-
-          a.appendChild(b);
-        }
-      }
-    });
-
-    inp.addEventListener("keydown", function(e) {
-      var x = document.getElementById(this.id + "autocomplete-list");
-      if (x) x = x.getElementsByTagName("div");
-
-      // Gérer la navigation dans la liste avec les flèches
-      if (e.keyCode == 40) {
-        currentFocus++;
-        addActive(x);
-      } else if (e.keyCode == 38) {
-        currentFocus--;
-        addActive(x);
-      } else if (e.keyCode == 13) {
-        e.preventDefault();
-        if (currentFocus > -1) {
-          if (x) x[currentFocus].click();
-        }
-      }
-    });
-
-    function addActive(x) {
-      if (!x) return false;
-      removeActive(x);
-      if (currentFocus >= x.length) currentFocus = 0;
-      if (currentFocus < 0) currentFocus = (x.length - 1);
-      x[currentFocus].classList.add("autocomplete-active");
-    }
-
-    function removeActive(x) {
-      for (var i = 0; i < x.length; i++) {
-        x[i].classList.remove("autocomplete-active");
-      }
-    }
-
-    function closeAllLists(elmnt) {
-      var x = document.getElementsByClassName("autocomplete-items");
-      for (var i = 0; i < x.length; i++) {
-        if (elmnt != x[i] && elmnt != inp) {
-          x[i].parentNode.removeChild(x[i]);
-        }
-      }
-    }
-
-    document.addEventListener("click", function(e) {
-      closeAllLists(e.target);
-    });
-  }
-</script>
-<script>
-  $(document).ready(function() {
-    var works = <%= raw @works.to_json %>; // Injecter les noms des œuvres dans le JavaScript
-    var designers = <%= raw @designers.to_json %>; // Injecter les noms des designers dans le JavaScript
-
-    // Mapping des noms vers les URLs respectives
-    var routeMap = {
-      <% @oeuvres.each do |oeuvre| %>
-        "<%= j oeuvre.nom_oeuvre %>": "<%= oeuvre_path(oeuvre) %>",
-      <% end %>
-      <% @designers.each do |designer| %>
-        "<%= j designer.nom_designer %>": "<%= designer_path(designer) %>",
-      <% end %>
-    };
-
-    // Initialise l'autocomplétion
-    autocomplete(document.getElementById("workSearch"), works.concat(designers), routeMap);
-  });
-</script>
-<script>
-  $(document).ready(function() {
-    var workSearchInput = document.getElementById("workSearch");
-
-    workSearchInput.addEventListener("keydown", function(event) {
-      if (event.key === "Enter") {
-        event.preventDefault(); // Empêche le comportement par défaut
-        document.querySelector("form").submit(); // Soumettre le formulaire
-      }
-    });
-  });
-</script>
+    </script>
