--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -149,7 +149,7 @@
 
   .bg-card {
     width: 80vw;
-    height: calc(100vh - 280px);
+    height: calc(100dvh - 280px);
     max-height: 700px;
   }
 
@@ -204,7 +204,7 @@
 
   .bg-card {
     width: 90vw;
-    height: calc(100vh - 280px);
+    height: calc(100dvh - 280px);
     max-height: 700px;
   }
 
@@ -259,7 +259,7 @@
 
   .bg-card {
     width: 90vw;
-    height: calc(100vh - 260px);
+    height: calc(100dvh - 260px);
     max-height: 700px;
   }
 
