--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -105,7 +105,7 @@
       </div>
     <% end %>
   </div>
-  <h2 class="title">Oeuvres</h2>
+  <h2 class="title">Références</h2>
   <div class="search-container">
     <input type="search" id="oeuvre-search" placeholder="Rechercher des œuvres" />
     <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none" style="fill: #202020;">
