--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -443,7 +443,7 @@
     <% end %>
   </div>
   <div class="flex-title-list">
-    <h2>Les oeuvres </h2>
+    <h2>Les références </h2>
     <%= link_to 'Ajouter des œuvres', '#', id: 'openPopupOeuvres', class:"button dark" %>
   </div>
   <div class="flex-card-list">
