--- a/app/views/pages/add_elements.html.erb
+++ b/app/views/pages/add_elements.html.erb
@@ -39,7 +39,7 @@
       <%end%>
       <%= link_to new_oeuvre_path do %>
         <div class="button-add">
-          Oeuvres
+          Références
         </div>
       <%end%>
     </div>
