--- a/app/views/designers/index.html.erb
+++ b/app/views/designers/index.html.erb
@@ -46,7 +46,7 @@
       <%= image_tag("logo.svg", alt: "Logo", class: "logo-img") %>
       <div>
         <%= link_to "Designers", designers_path, class: "active" %> |
-        <%= link_to "Oeuvres", oeuvres_path %>
+        <%= link_to "Références", oeuvres_path %>
       </div>
       <%= link_to search_oeuvres_path do %>
         <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -56,7 +56,7 @@
     </div>
     <p class="nav-home">
       <%= link_to "Designers", designers_path, class: "active" %> |
-      <%= link_to "Oeuvres", oeuvres_path %>
+      <%= link_to "Références", oeuvres_path %>
     </p>
     <div class="box-card" id="boxCard">
       <%= render partial: 'designers/card', collection: @designers, as: :card %>
