--- a/app/views/oeuvres/search.html.erb
+++ b/app/views/oeuvres/search.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "Rechercher des oeuvres et des designers - Omniscient Design" %>
+<% content_for :title, "Rechercher des références et des designers - Omniscient Design" %>
 <% content_for :description, "La page de recherche permet de trouver efficacement et rapidement la référence que tu cherches. Trie les références par domaine, année ou encore pays !" %>
 <style>
   .main-search h1{
@@ -427,7 +427,7 @@
     <div id="load-more-button-designers">
       <button class="load-more-btn button dark" >Charger plus de designers</button>
     </div>
-    <h2 class="title">Oeuvres</h2>
+    <h2 class="title">Références</h2>
     <div class="container-oeuvres">
       <div class="flex-oeuvre" id="oeuvre-cards">
         <% @oeuvres.each do |oeuvre| %>
@@ -449,7 +449,7 @@
         </div>
         <!-- Bouton en dehors de la flexbox -->
         <div id="load-more-button-oeuvres">
-          <button class="load-more-btn button dark">Charger plus d'oeuvres</button>
+          <button class="load-more-btn button dark">Charger plus de références</button>
         </div>
       </div>
       <script>
@@ -510,96 +510,7 @@
           });
       </script>
     </div>
-    <script>
-      function autocomplete(inp, arr, routeMap) {
-        var currentFocus;
-
-        inp.addEventListener("input", function(e) {
-          var a, b, i, val = this.value;
-          closeAllLists();
-          if (!val) { return false; }
-          currentFocus = -1;
-
-          // Crée la liste de suggestions
-          a = document.createElement("DIV");
-          a.setAttribute("id", this.id + "autocomplete-list");
-          a.setAttribute("class", "autocomplete-items");
-          this.parentNode.appendChild(a);
-
-          // Parcours les éléments du tableau pour afficher les suggestions
-          for (i = 0; i < arr.length; i++) {
-            if (arr[i].substr(0, val.length).toUpperCase() == val.toUpperCase()) {
-              b = document.createElement("DIV");
-              b.innerHTML = "<strong>" + arr[i].substr(0, val.length) + "</strong>";
-              b.innerHTML += arr[i].substr(val.length);
-              b.innerHTML += "<input type='hidden' value='" + arr[i] + "'>";
-
-              // Gestion du clic sur la suggestion
-              b.addEventListener("click", function(e) {
-                const selectedValue = this.getElementsByTagName("input")[0].value;
-                inp.value = selectedValue;
-                closeAllLists();
-
-                // Redirection vers la page correspondante
-                if (routeMap[selectedValue]) {
-                  window.location.href = routeMap[selectedValue];
-                } else {
-                  alert("Page non trouvée pour " + selectedValue);
-                }
-              });
-
-              a.appendChild(b);
-            }
-          }
-        });
-
-        inp.addEventListener("keydown", function(e) {
-          var x = document.getElementById(this.id + "autocomplete-list");
-          if (x) x = x.getElementsByTagName("div");
-
-          // Gérer la navigation dans la liste avec les flèches
-          if (e.keyCode == 40) {
-            currentFocus++;
-            addActive(x);
-          } else if (e.keyCode == 38) {
-            currentFocus--;
-            addActive(x);
-          } else if (e.keyCode == 13) {
-            e.preventDefault();
-            if (currentFocus > -1) {
-              if (x) x[currentFocus].click();
-            }
-          }
-        });
-
-        function addActive(x) {
-          if (!x) return false;
-          removeActive(x);
-          if (currentFocus >= x.length) currentFocus = 0;
-          if (currentFocus < 0) currentFocus = (x.length - 1);
-          x[currentFocus].classList.add("autocomplete-active");
-        }
-
-        function removeActive(x) {
-          for (var i = 0; i < x.length; i++) {
-            x[i].classList.remove("autocomplete-active");
-          }
-        }
-
-        function closeAllLists(elmnt) {
-          var x = document.getElementsByClassName("autocomplete-items");
-          for (var i = 0; i < x.length; i++) {
-            if (elmnt != x[i] && elmnt != inp) {
-              x[i].parentNode.removeChild(x[i]);
-            }
-          }
-        }
-
-        document.addEventListener("click", function(e) {
-          closeAllLists(e.target);
-        });
-      }
-    </script>
+    <%= javascript_include_tag "controllers/autocomplete", defer: true %>
     <script>
       $(document).ready(function() {
         var works = <%= raw @works.to_json %>; // Injecter les noms des œuvres dans le JavaScript
