--- a/app/assets/stylesheets/pages/_defaultpage.scss
+++ b/app/assets/stylesheets/pages/_defaultpage.scss
@@ -45,8 +45,10 @@ tr:hover {
 }
 
 .btn {
-  margin-top: 24px;
-  display: inline-block;
+  margin-top: 8px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   padding: 8px 16px;
   background-color: #007bff;
   color: #fff;
