--- a/app/views/oeuvres/_form.html.erb
+++ b/app/views/oeuvres/_form.html.erb
@@ -15,8 +15,8 @@
     </div>
     <div>
       <div class="autocomplete">
-        <%= form.hidden_field :designer_id %>
-        <%= form.text_field :designer_name, placeholder: "Rechercher un designer", autocomplete: "off" %>
+        <%# <%= form.hidden_field :designer_id %>
+        <%#  <%= form.text_field :designer_name, placeholder: "Rechercher un designer", autocomplete: "off" %>
       </div>
     </div>
     <div style="display:flex">
