--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,122 +1,10 @@
 <% content_for :title, "Crée tes propres listes de références - Omniscient Design" %>
 <% content_for :description, "Ici, tu peux retrouver les références de design qui t'ont marqué. Crée tes propres listes pour apprendre, t'inspirer ou encore personnaliser ton expérience. " %>
 <style>
-  h1{
-    margin-top: 32px;
-  }
-  .top-header{
-    padding: 78px 10vw;
-    height: 120px;
-    background-color: #202020;
-    color:#FFF;
-     position: relative;
-    }
-    .subtitle{
-      width: 50vw;
-    }
-    .list-card{
-    background-color:#FFF;
-    padding: 25px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: #202020;
-    font-weight: 500;
-    border-radius:5px;
-    margin-top: 16px;
-    position: relative;
-
-  }
-     .list-card:hover{
-    background-color:#EDEDED;
-    cursor: pointer;
-  }
-  .our-list{
-    padding: 0 10vw;
-    padding-bottom: 100px;
-  }
-  .flex-title-list{
-    margin-top: 64px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-
-  }
-    .our-list ul{
-    margin-top: 48px;
-  }
-  .no-list{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 140px;
-    gap: 32px;
-
-  }
-  .no-list p{
-    text-align: center;
-    width: 50%;
-  }
-  @media screen and (min-width:0px) and (max-width:500px) {
-    h1{
-      margin-top: 24px;
-    }
+  @media screen and (max-width:500px) {
     .button{
-      width: fit-content;
+      width:fit-content;
     }
-    .top-header{
-      padding: 32px 5vw;
-      height: fit-content;
-    }
-    .subtitle{
-      width: 90vw;
-    }
-    .list-card{
-      font-size: 15px;
-      height: 30px;
-      padding: 20px;
-    }
-     .list-card svg{
-      scale: 0.8;
-     }
-    .our-list{
-      padding: 0 5vw;
-      padding-bottom: 50px;
-    }
-    .flex-title-list{
-      margin-top: 48px;
-      gap: 16px;
-      flex-direction:column;
-    }
-    h2{
-      font-size: 18px;
-    }
-  }
-  @media screen and (min-width:501px) and (max-width:800px) {
-    h1{
-      margin-top: 24px;
-    }
-    .top-header{
-      padding: 48px 5vw;
-      height: 150px;
-    }
-    .subtitle{
-      width: 90vw;
-    }
-    .list-card{
-    height: 30px;
-    }
-    .our-list{
-      padding: 0 5vw;
-      padding-bottom: 50px;
-    }
-    .flex-title-list{
-      margin-top: 48px;
-    }
-
   }
 </style>
 <section class="top-header">
