--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -111,7 +111,7 @@ textarea {
   input[type=date],
   input[type=email],
   input[type=password] {
-    width: 80vw;
+    width: calc(100% - 18px);
     font-size: 15px;
     &::placeholder {
       font-size: 15px;
@@ -119,7 +119,7 @@ textarea {
   }
 
   select {
-    width: calc(80vw + 30px);
+    width: calc(100% + 2px);
     font-size: 15px;
     &::placeholder {
       font-size: 15px;
@@ -127,7 +127,7 @@ textarea {
   }
 
   textarea {
-    width: 80vw;
+    width: calc(100% - 18px);
     height: 120px;
     font-size: 15px;
     &::placeholder {
@@ -141,7 +141,8 @@ textarea {
   input[type=date],
   input[type=email],
   input[type=password] {
-    width: 80vw;
+    width: calc(100% - 18px);
+    padding-left: 15px;
     height: 60px;
     font-size: 15px;
     &::placeholder {
@@ -150,7 +151,8 @@ textarea {
   }
 
   select {
-    width: calc(80vw + 30px);
+    width: calc(100% + 2px);
+    padding-left: 15px;
     height: 60px;
     font-size: 15px;
     &::placeholder {
@@ -159,7 +161,8 @@ textarea {
   }
 
   textarea {
-    width: 80vw;
+    width: calc(100% - 18px);
+    padding-left: 15px;
     height: 120px;
     font-size: 15px;
     &::placeholder {
@@ -173,7 +176,8 @@ textarea {
   input[type=date],
   input[type=email],
   input[type=password] {
-    width: 70vw;
+    width: calc(100% - 18px);
+    padding-left: 15px;
     height: 55px;
     font-size: 14px;
     &::placeholder {
@@ -182,7 +186,8 @@ textarea {
   }
 
   select {
-    width: calc(70vw + 30px);
+    width: calc(100% + 2px);
+    padding-left: 15px;
     height: 55px;
     font-size: 14px;
     &::placeholder {
@@ -191,7 +196,8 @@ textarea {
   }
 
   textarea {
-    width: 70vw;
+    width: calc(100% - 18px);
+    padding-left: 15px;
     height: 120px;
     font-size: 14px;
     &::placeholder {
